Top links alignment and width of venue-card div fixed

--- a/src/Components/Home/HeroSec/HeroSec.scss
+++ b/src/Components/Home/HeroSec/HeroSec.scss
@@ -38,6 +38,7 @@
   }
 }
 .venue-card {
+  width: 100%;
   transform: translateY(-30%);
 }
 
